WFPREV-1129 : Report export jobs, phase 5 - remove the synchronous report path
The client now exports through /reports/jobs, so the old path goes:

- API: POST /reports (ReportController), the Function URL call and response
  model in XlsxReportGenerator (it now only builds the Lambda input), the
  stream-based XLSX methods in ReportService, their tests and native config.
- Terraform: the report Lambda's Function URL, which had authorization_type
  NONE, and the REPORT_GENERATOR_LAMBDA_URL variable.
- Report Lambda: the inline request/response path; it only handles report job
  events now. The old LambdaHandlerTest covered that path and is removed.
- Client: ProjectService.downloadProjects, saveBlob, DownloadFileNames and the
  snackbar messages only the old download used.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>