@@ -1,248 +1,63 @@
 package ca.bc.gov.nrs.wfprev.services;
 
-import ca.bc.gov.nrs.wfone.common.service.api.ServiceException;
 import ca.bc.gov.nrs.wfprev.data.entities.ProjectCulturalPrescribedFireReportEntity;
 import ca.bc.gov.nrs.wfprev.data.entities.ProjectFuelManagementReportEntity;
 import ca.bc.gov.nrs.wfprev.data.entities.ResultsCulturalPrescribedFireReportEntity;
 import ca.bc.gov.nrs.wfprev.data.entities.ResultsFuelManagementReportEntity;
-import com.sun.net.httpserver.HttpExchange;
-import com.sun.net.httpserver.HttpServer;
-import org.junit.jupiter.api.BeforeEach;
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.Test;
 
-import java.io.ByteArrayOutputStream;
-import java.io.OutputStream;
-import java.net.InetSocketAddress;
-import java.nio.charset.StandardCharsets;
-import java.util.Base64;
-import java.util.Collections;
 import java.util.List;
-import java.util.concurrent.atomic.AtomicReference;
 
-import static org.junit.jupiter.api.Assertions.assertArrayEquals;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertSame;
 
 class XlsxReportGeneratorTest {
 
-    private XlsxReportGenerator generator;
+    private final XlsxReportGenerator generator = new XlsxReportGenerator();
 
-    @BeforeEach
-    void setUp() {
-        generator = new XlsxReportGenerator();
+    @Test
+    void buildProjectRequest_carriesTheFiscalRowsAsOneXlsxReport() {
+        List<ProjectFuelManagementReportEntity> fuel = List.of(new ProjectFuelManagementReportEntity());
+        List<ProjectCulturalPrescribedFireReportEntity> crx = List.of(new ProjectCulturalPrescribedFireReportEntity());
+
+        XlsxReportGenerator.LambdaReportRequest request = generator.buildProjectRequest(fuel, crx);
+
+        assertEquals(1, request.getReports().size());
+        XlsxReportGenerator.LambdaReportRequest.Report report = request.getReports().get(0);
+        assertEquals("XLSX", report.getReportType());
+        assertEquals("ReMi_Fiscal", report.getReportName());
+        assertSame(fuel, report.getXlsxReportData().getProjectFuelManagementReportData());
+        assertSame(crx, report.getXlsxReportData().getProjectCulturePrescribedFireReportData());
+        assertNull(report.getXlsxReportData().getResultsFuelManagementReportData());
     }
 
     @Test
-    void generateXlsx_missingLambdaUrl_throwsServiceException() {
-        generator.setReportGeneratorLambdaUrl(null);
-        ServiceException ex1 = assertThrows(
-                ServiceException.class,
-                () -> generator.generateXlsx(Collections.emptyList(), Collections.emptyList(), new ByteArrayOutputStream())
-        );
-        assertTrue(ex1.getMessage().contains("REPORT_GENERATOR_LAMBDA_URL"));
+    void buildResultsRequest_carriesTheResultsRowsAsOneXlsxReport() {
+        List<ResultsFuelManagementReportEntity> fuel = List.of(new ResultsFuelManagementReportEntity());
+        List<ResultsCulturalPrescribedFireReportEntity> crx = List.of(new ResultsCulturalPrescribedFireReportEntity());
 
-        generator.setReportGeneratorLambdaUrl("   ");
-        ServiceException ex2 = assertThrows(
-                ServiceException.class,
-                () -> generator.generateXlsx(Collections.emptyList(), Collections.emptyList(), new ByteArrayOutputStream())
-        );
-        assertTrue(ex2.getMessage().contains("REPORT_GENERATOR_LAMBDA_URL"));
+        XlsxReportGenerator.LambdaReportRequest request = generator.buildResultsRequest(fuel, crx);
+
+        XlsxReportGenerator.LambdaReportRequest.Report report = request.getReports().get(0);
+        assertEquals("ReMi_RESULTS", report.getReportName());
+        assertSame(fuel, report.getXlsxReportData().getResultsFuelManagementReportData());
+        assertSame(crx, report.getXlsxReportData().getResultsCulturePrescribedFireReportData());
+        assertNull(report.getXlsxReportData().getProjectFuelManagementReportData());
     }
 
     @Test
-    void generateXlsx_success_writesDecodedBytes() throws Exception {
-        byte[] expectedBytes = "mock-excel-binary-data".getBytes(StandardCharsets.UTF_8);
-        String base64 = Base64.getEncoder().encodeToString(expectedBytes);
-        String jsonPayload = "{\"files\":[{\"filename\":\"ReMi_Fiscal.xlsx\",\"content\":\"" + base64 + "\"}]}";
-        AtomicReference<String> requestBody = new AtomicReference<>();
+    void request_serializesToTheShapeTheLambdaReads() throws Exception {
+        ResultsFuelManagementReportEntity row = new ResultsFuelManagementReportEntity();
+        row.setProjectName("Test project");
 
-        HttpServer server = HttpServer.create(new InetSocketAddress(0), 0);
-        server.createContext("/lambda", (HttpExchange exchange) -> {
-            requestBody.set(new String(exchange.getRequestBody().readAllBytes(), StandardCharsets.UTF_8));
-            byte[] response = jsonPayload.getBytes(StandardCharsets.UTF_8);
-            exchange.getResponseHeaders().add("Content-Type", "application/json");
-            exchange.sendResponseHeaders(200, response.length);
-            try (OutputStream os = exchange.getResponseBody()) {
-                os.write(response);
-            }
-        });
-        server.start();
+        JsonNode json = new ObjectMapper().valueToTree(generator.buildResultsRequest(List.of(row), List.of()));
 
-        try {
-            String url = "http://localhost:" + server.getAddress().getPort() + "/lambda";
-            generator.setReportGeneratorLambdaUrl(url);
-
-            ByteArrayOutputStream out = new ByteArrayOutputStream();
-            generator.generateXlsx(List.of(new ProjectFuelManagementReportEntity()), List.of(new ProjectCulturalPrescribedFireReportEntity()), out);
-
-            assertArrayEquals(expectedBytes, out.toByteArray());
-            assertTrue(requestBody.get().contains("\"reportName\":\"ReMi_Fiscal\""));
-        } finally {
-            server.stop(0);
-        }
-    }
-
-    @Test
-    void generateXlsx_lambdaNon200_throwsServiceException() throws Exception {
-        HttpServer server = HttpServer.create(new InetSocketAddress(0), 0);
-        server.createContext("/lambda", (HttpExchange exchange) -> {
-            byte[] response = "Internal error".getBytes(StandardCharsets.UTF_8);
-            exchange.sendResponseHeaders(500, response.length);
-            try (OutputStream os = exchange.getResponseBody()) {
-                os.write(response);
-            }
-        });
-        server.start();
-
-        try {
-            String url = "http://localhost:" + server.getAddress().getPort() + "/lambda";
-            generator.setReportGeneratorLambdaUrl(url);
-
-            ByteArrayOutputStream out = new ByteArrayOutputStream();
-            ServiceException ex = assertThrows(
-                    ServiceException.class,
-                    () -> generator.generateXlsx(Collections.emptyList(), Collections.emptyList(), out)
-            );
-            assertTrue(ex.getMessage().contains("Lambda returned error"));
-        } finally {
-            server.stop(0);
-        }
-    }
-
-    @Test
-    void generateXlsx_lambdaNoFiles_throwsServiceException() throws Exception {
-        HttpServer server = HttpServer.create(new InetSocketAddress(0), 0);
-        server.createContext("/lambda", (HttpExchange exchange) -> {
-            byte[] response = "{\"files\":[]}".getBytes(StandardCharsets.UTF_8);
-            exchange.getResponseHeaders().add("Content-Type", "application/json");
-            exchange.sendResponseHeaders(200, response.length);
-            try (OutputStream os = exchange.getResponseBody()) {
-                os.write(response);
-            }
-        });
-        server.start();
-
-        try {
-            String url = "http://localhost:" + server.getAddress().getPort() + "/lambda";
-            generator.setReportGeneratorLambdaUrl(url);
-
-            ByteArrayOutputStream out = new ByteArrayOutputStream();
-            ServiceException ex = assertThrows(
-                    ServiceException.class,
-                    () -> generator.generateXlsx(Collections.emptyList(), Collections.emptyList(), out)
-            );
-            assertTrue(ex.getMessage().contains("No files returned"));
-        } finally {
-            server.stop(0);
-        }
-    }
-
-    @Test
-    void generateResultsXlsx_missingLambdaUrl_throwsServiceException() {
-        generator.setReportGeneratorLambdaUrl(null);
-        ServiceException ex1 = assertThrows(
-                ServiceException.class,
-                () -> generator.generateResultsXlsx(Collections.emptyList(), Collections.emptyList(), new ByteArrayOutputStream())
-        );
-        assertTrue(ex1.getMessage().contains("REPORT_GENERATOR_LAMBDA_URL"));
-
-        generator.setReportGeneratorLambdaUrl("   ");
-        ServiceException ex2 = assertThrows(
-                ServiceException.class,
-                () -> generator.generateResultsXlsx(Collections.emptyList(), Collections.emptyList(), new ByteArrayOutputStream())
-        );
-        assertTrue(ex2.getMessage().contains("REPORT_GENERATOR_LAMBDA_URL"));
-    }
-
-    @Test
-    void generateResultsXlsx_success_writesDecodedBytes() throws Exception {
-        byte[] expectedBytes = "mock-results-excel-binary-data".getBytes(StandardCharsets.UTF_8);
-        String base64 = Base64.getEncoder().encodeToString(expectedBytes);
-        String jsonPayload = "{\"files\":[{\"filename\":\"ReMi_RESULTS.xlsx\",\"content\":\"" + base64 + "\"}]}";
-        AtomicReference<String> requestBody = new AtomicReference<>();
-
-        HttpServer server = HttpServer.create(new InetSocketAddress(0), 0);
-        server.createContext("/lambda", (HttpExchange exchange) -> {
-            requestBody.set(new String(exchange.getRequestBody().readAllBytes(), StandardCharsets.UTF_8));
-            byte[] response = jsonPayload.getBytes(StandardCharsets.UTF_8);
-            exchange.getResponseHeaders().add("Content-Type", "application/json");
-            exchange.sendResponseHeaders(200, response.length);
-            try (OutputStream os = exchange.getResponseBody()) {
-                os.write(response);
-            }
-        });
-        server.start();
-
-        try {
-            String url = "http://localhost:" + server.getAddress().getPort() + "/lambda";
-            generator.setReportGeneratorLambdaUrl(url);
-
-            ByteArrayOutputStream out = new ByteArrayOutputStream();
-            generator.generateResultsXlsx(
-                    List.of(new ResultsFuelManagementReportEntity()),
-                    List.of(new ResultsCulturalPrescribedFireReportEntity()),
-                    out
-            );
-
-            assertArrayEquals(expectedBytes, out.toByteArray());
-            assertTrue(requestBody.get().contains("\"reportName\":\"ReMi_RESULTS\""));
-        } finally {
-            server.stop(0);
-        }
-    }
-
-    @Test
-    void generateResultsXlsx_lambdaNon200_throwsServiceException() throws Exception {
-        HttpServer server = HttpServer.create(new InetSocketAddress(0), 0);
-        server.createContext("/lambda", (HttpExchange exchange) -> {
-            byte[] response = "Internal error".getBytes(StandardCharsets.UTF_8);
-            exchange.sendResponseHeaders(500, response.length);
-            try (OutputStream os = exchange.getResponseBody()) {
-                os.write(response);
-            }
-        });
-        server.start();
-
-        try {
-            String url = "http://localhost:" + server.getAddress().getPort() + "/lambda";
-            generator.setReportGeneratorLambdaUrl(url);
-
-            ByteArrayOutputStream out = new ByteArrayOutputStream();
-            ServiceException ex = assertThrows(
-                    ServiceException.class,
-                    () -> generator.generateResultsXlsx(Collections.emptyList(), Collections.emptyList(), out)
-            );
-            assertTrue(ex.getMessage().contains("Lambda returned error"));
-        } finally {
-            server.stop(0);
-        }
-    }
-
-    @Test
-    void generateResultsXlsx_lambdaNoFiles_throwsServiceException() throws Exception {
-        HttpServer server = HttpServer.create(new InetSocketAddress(0), 0);
-        server.createContext("/lambda", (HttpExchange exchange) -> {
-            byte[] response = "{\"files\":[]}".getBytes(StandardCharsets.UTF_8);
-            exchange.getResponseHeaders().add("Content-Type", "application/json");
-            exchange.sendResponseHeaders(200, response.length);
-            try (OutputStream os = exchange.getResponseBody()) {
-                os.write(response);
-            }
-        });
-        server.start();
-
-        try {
-            String url = "http://localhost:" + server.getAddress().getPort() + "/lambda";
-            generator.setReportGeneratorLambdaUrl(url);
-
-            ByteArrayOutputStream out = new ByteArrayOutputStream();
-            ServiceException ex = assertThrows(
-                    ServiceException.class,
-                    () -> generator.generateResultsXlsx(Collections.emptyList(), Collections.emptyList(), out)
-            );
-            assertTrue(ex.getMessage().contains("No files returned"));
-        } finally {
-            server.stop(0);
-        }
+        JsonNode report = json.path("reports").get(0);
+        assertEquals("XLSX", report.path("reportType").asText());
+        assertEquals("Test project", report.path("xlsxReportData").path("resultsFuelManagementReportData")
+                .get(0).path("projectName").asText());
     }
 }
